--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header">
-    <nav class="nav-bar">
+    <nav class="menu">
       <ul class="nav-list">
         <li class="active"><a href="#me">Me</a></li>
         <li class=""><a href="#projects">Projetos</a></li>
@@ -20,8 +20,8 @@
       </ul>
     </nav>
   </header>
-  <main class="main">
-    <div id="me" class="card-container">
+  <main class="content">
+    <section id="me" class="card-container">
       <h2>Sobre mim</h2>
       <div class="me-container">
         <p class="text-about-me">
@@ -49,27 +49,24 @@
               <img src="assets/twitter.svg" alt="icone do twitter">
             </a>
             <a href="https://api.whatsapp.com/send?phone=5598991650677">
-              <img
-                src="https://cdn-icons.flaticon.com/svg/6422/6422213.svg?token=exp=1671499031~hmac=38265538191224a7847459d430ad32ad"
-                alt="Ícone do zap">
+              <img src="assets/whatsapp.svg" alt="Ícone do zap">
             </a>
           </span>
         </div>
       </div>
-    </div>
-    <div id="projects" class="card-container">
+    </section>
+    <section id="projects" class="card-container">
       <h2>Projetos</h2>
       <div class="wrapper">
         <a href="https://github.com/adrianmedeiros00/calculator-react-ts">
           <button class="btn-project-link">
-            <img class="project-icon"
-              src="https://cdn-icons.flaticon.com/svg/3914/3914400.svg?token=exp=1671498613~hmac=686f9bfe308bf5ece5d0157a8f580b40">
+            <img class="project-icon" src="assets/calculadora.svg">
             Calculadora React TS
           </button>
         </a>
       </div>
-    </div>
-    <div id="technologies" class="card-container">
+    </section>
+    <section id="technologies" class="card-container">
       <h2>Tecnologias</h2>
       <div class="wrapper">
         <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" />
@@ -87,8 +84,8 @@
         <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" />
         <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" />
       </div>
-    </div>
-    <div id="games" class="card-container">
+    </section>
+    <section id="games" class="card-container">
       <h2>Games</h2>
       <div class="wrapper">
         <img class="game-icon" src="https://i.pinimg.com/originals/a4/00/33/a400333f7c9137ad1ebb9ded69755c48.png"
@@ -101,7 +98,7 @@
         <img class="game-icon"
           src="https://cdn2.steamgriddb.com/file/sgdb-cdn/icon_thumb/2d79ee33c5f2e4b7594fd3d3b67f36ed.png" alt="">
       </div>
-    </div>
+    </section>
   </main>
   <footer class="footer">Made with ❤ by adrianmedeirosdev</footer>
 </body>
