--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <ul class="nav-list">
+        <li class="active"><a href="#me">Me</a></li>
+        <li class=""><a href="#projects">Projects</a></li>
+        <li class=""><a href="#technologies">Tecnologies</a></li>
+        <li class=""><a href="#games">Games</a></li>
+      </ul>
+    </nav>
+  </header>
   <main class="content">
     <section id="me" class="card-container">
       <h2>Sobre mim</h2>
@@ -52,6 +62,18 @@
           <button class="btn-project-link">
             <img class="project-icon" src="assets/calculadora.svg">
             Calculadora React TS
+          </button>
+        </a>
+        <a href="https://github.com/adrianmedeiros00/calculator">
+          <button class="btn-project-link">
+            <img class="project-icon" src="assets/calculadora.svg">
+            Calculadora HTML CSS JS
+          </button>
+        </a>
+        <a href="https://github.com/adrianmedeiros00/to-do">
+          <button class="btn-project-link">
+            <img class="project-icon" src="assets/lista.png">
+            To-do list
           </button>
         </a>
       </div>
