--- a/index.html
+++ b/index.html
@@ -5,102 +5,76 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="https://unpkg.com/feather-icons"></script>
   <title>Portfólio</title>
 </head>
 
 <body>
   <section id="me" class="card-container">
-    <h2>Sobre mim 🤓</h2>
     <div class="me-container">
-      <p class="text-about-me">
-        Eai, beleza?
-        Me chamo Adrian, tenho 22 anos, sou de São Luís do Maranhão. Atualmente estou
-        tentando me tornar
-        Bacharel
-        em Sistemas de Informação pelo
-        Instituto Federal de Educação, Ciênia e Tecnologia do Maranhão - IFMA.
-        Além de estudar programação e UI, gosto de filmes, séries, animes e
-        games competitivos. Fiz este site com html5, css3 e javascript para
-        fins de estudo e aprendizado.
-      </p>
       <div class="perfil-container">
-        <img class="perfil-img" src="assets/eudegrade.png" alt="foto de Adrian">
+        <img class="perfil-img" src="assets/me.jpeg" alt="foto de Adrian Medeiros">
         <h3>Adrian Medeiros</h3>
         <span class="social-medias">
-          <a href="https://instagram.com/adrianmedeiross">
-            <img src="assets/instagram.svg" alt="icone do instagram">
+          <a href="https://instagram.com/adrianmedeirosdev">
+            <i class="social-icon" data-feather="instagram"></i>
           </a>
-          <a href="https://github.com/adrianmedeiros00">
-            <img src="assets/github.svg" alt="icone do github">
+          <a href="https://github.com/adrianmedeirosdev">
+            <i class="social-icon" data-feather="github"></i>
           </a>
-          <a href="https://twitter.com/adrianmdeiros">
-            <img src="assets/twitter.svg" alt="icone do twitter">
+          <a href="https://twitter.com/adrianmedeirosdev">
+            <i class="social-icon" data-feather="twitter"></i>
           </a>
           <a href="https://api.whatsapp.com/send?phone=5598991650677">
-            <img src="assets/whatsapp.svg" alt="Ícone do zap">
+            <i class="social-icon" data-feather="message-circle"></i>
           </a>
         </span>
       </div>
     </div>
+
+    <section id="projects">
+      <div class="wrapper">
+        <a href="https://github.com/adrianmedeirosdev/mini-bio">
+          <button class="btn-project-link">
+            <i class="project-icon" data-feather="user"></i>
+            Mini-bio
+          </button>
+        </a>
+        <a href="https://github.com/adrianmedeirosdev/simple-calculator">
+          <button class="btn-project-link">
+            <i class="project-icon" data-feather="divide-square"></i>
+            Calculadora simples
+          </button>
+        </a>
+        <a href="https://github.com/adrianmedeirosdev/to-do-list">
+          <button class="btn-project-link">
+            <i class="project-icon" data-feather="list"></i>
+            To-do list
+          </button>
+        </a>
+      </div>
+    </section>
+    <section id="technologies">
+      <div class="wrapper">
+        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+        <img class="dev-icon"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+        <img class="dev-icon"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
+        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
+        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
+        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/wordpress/wordpress-plain.svg" />
+      </div>
+    </section>
   </section>
-  <section id="projects" class="card-container">
-    <h2>Projetos 💡</h2>
-    <div class="wrapper">
-      <a href="https://github.com/adrianmedeiros00/calculator-react-ts">
-        <button class="btn-project-link">
-          <img class="project-icon" src="assets/calculadora.svg">
-          Calculadora React TS
-        </button>
-      </a>
-      <a href="https://github.com/adrianmedeiros00/calculator">
-        <button class="btn-project-link">
-          <img class="project-icon" src="assets/calculadora.svg">
-          Calculadora HTML CSS JS
-        </button>
-      </a>
-      <a href="https://github.com/adrianmedeiros00/to-do">
-        <button class="btn-project-link">
-          <img class="project-icon" src="assets/lista.png">
-          To-do list
-        </button>
-      </a>
-    </div>
-  </section>
-  <section id="technologies" class="card-container">
-    <h2>Tecnologias e Ferramentas 💻</h2>
-    <div class="wrapper">
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
-      <img class="dev-icon"
-        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
-      <img class="dev-icon"
-        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/wordpress/wordpress-plain.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" />
-      <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" />
-    </div>
-  </section>
-  <section id="games" class="card-container">
-    <h2>Games que eu gosto 🎮</h2>
-    <div class="wrapper">
-      <img class="game-icon" src="https://i.pinimg.com/originals/a4/00/33/a400333f7c9137ad1ebb9ded69755c48.png" alt="">
-      <img class="game-icon"
-        src="https://external-preview.redd.it/SpDNFegxVRzXyUta0BFMdNqyLVmXGVcKHhyVsqYjOfg.png?auto=webp&s=6ccb2078b5f2dbabd454f438ab6eddbc50420916"
-        alt="">
-      <img class="game-icon" src="https://pbs.twimg.com/profile_images/1197187549430763521/rF1ASHnY_400x400.jpg" alt="">
-      <img class="game-icon"
-        src="https://cdn2.steamgriddb.com/file/sgdb-cdn/icon_thumb/2d79ee33c5f2e4b7594fd3d3b67f36ed.png" alt="">
-    </div>
-  </section>
-  <footer class="footer">Made with ❤ by adrianmedeirosdev</footer>
+  <footer class="footer">Made by adrianmedeirosdev</footer>
 </body>
-<script src="script.js">
+<script src="js/script.js"></script>
+<script>
+  feather.replace() 
 </script>
 
 </html>
