--- a/index.html
+++ b/index.html
@@ -11,52 +11,51 @@
 </head>
 
 <body>
-  <div id="me" class="card-container">
-    <div class="top">
-      <div class="me-container">
-        <div class="perfil-container">
-          <img class="perfil-img" src="assets/me.jpeg" alt="foto de Adrian Medeiros">
-          <h3>@adrianmedeirosdev</h3>
-          <span class="social-medias">
-            <a href="https://instagram.com/adrianmedeirosdev">
-              <i class="social-icon" data-feather="instagram"></i>
-            </a>
-            <a href="https://github.com/adrianmedeirosdev">
-              <i class="social-icon" data-feather="github"></i>
-            </a>
-            <a href="https://twitter.com/adrianmedeirosdev">
-              <i class="social-icon" data-feather="twitter"></i>
-            </a>
-            <a href="https://api.whatsapp.com/send?phone=5598991650677">
-              <i class="social-icon" data-feather="message-circle"></i>
-            </a>
-          </span>
+  <div class="card-container">
+    <div class="me-container">
+      <div class="perfil-container">
+        <img class="perfil-img" src="assets/me.jpeg" alt="foto de Adrian Medeiros">
+        <h3>@adrianmedeirosdev</h3>
+        <div class="social-medias">
+          <a href="https://instagram.com/adrianmedeirosdev">
+            <i class="social-icon" data-feather="instagram"></i>
+          </a>
+          <a href="https://github.com/adrianmedeirosdev">
+            <i class="social-icon" data-feather="github"></i>
+          </a>
+          <a href="https://twitter.com/adrianmedeirosdev">
+            <i class="social-icon" data-feather="twitter"></i>
+          </a>
+          <a href="https://api.whatsapp.com/send?phone=5598991650677">
+            <i class="social-icon" data-feather="message-circle"></i>
+          </a>
         </div>
       </div>
-      <section id="projects">
-        <h1>Studying to become a Fullstack Developer</h1>
-        <div class="wrapper">
-          <a href="https://github.com/adrianmedeirosdev/mini-bio">
-            <button class="btn-project-link">
-              <i class="project-icon" data-feather="user"></i>
-              Mini-bio
-            </button>
-          </a>
-          <a href="https://github.com/adrianmedeirosdev/simple-calculator">
-            <button class="btn-project-link">
-              <i class="project-icon" data-feather="divide-square"></i>
-              Calculadora simples
-            </button>
-          </a>
-          <a href="https://github.com/adrianmedeirosdev/to-do-list">
-            <button class="btn-project-link">
-              <i class="project-icon" data-feather="list"></i>
-              To-do list
-            </button>
-          </a>
-        </div>
-      </section>
     </div>
+    <section id="projects">
+      <div class="wrapper">
+        <a href="https://github.com/adrianmedeirosdev/mini-bio">
+          <button class="btn-project-link">
+            <i class="project-icon" data-feather="user"></i>
+            Mini-bio
+          </button>
+        </a>
+        <a href="https://github.com/adrianmedeirosdev/simple-calculator">
+          <button class="btn-project-link">
+            <i class="project-icon" data-feather="divide-square"></i>
+            Calculadora simples
+          </button>
+        </a>
+        <a href="https://github.com/adrianmedeirosdev/to-do-list">
+          <button class="btn-project-link">
+            <i class="project-icon" data-feather="list"></i>
+            To-do list
+          </button>
+        </a>
+      </div>
+    </section>
+  </div>
+  <footer class="footer">
     <section id="technologies">
       <div class="wrapper grid">
         <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
@@ -72,8 +71,8 @@
         <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
       </div>
     </section>
-  </div>
-  <footer class="footer">Made by adrianmedeirosdev</footer>
+    Made by adrianmedeirosdev
+  </footer>
 </body>
 <script src="js/script.js"></script>
 <script>
