--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   <footer class="footer">
     <section id="technologies">
-      <div class="wrapper grid">
+      <div class="grid">
         <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
         <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
         <img class="dev-icon"
