--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             Mini-bio
           </button>
         </a>
-        <a href="https://github.com/adrianmedeirosdev/simple-calculator">
+        <a href="https://adrianmedeirosdev.github.io/simple-calculator">
           <button class="btn-project-link">
             <i class="project-icon" data-feather="divide-square"></i>
             Calculadora simples
           </button>
         </a>
-        <a href="https://github.com/adrianmedeirosdev/to-do-list">
-          <button class="btn-project-link">
+        <a href="https://adrianmedeirosdev.github.io/to-do-list">
+          <button class=" btn-project-link">
             <i class="project-icon" data-feather="list"></i>
             To-do list
           </button>
