--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
       <div class="perfil-container">
         <img class="perfil-img" src="assets/me.jpeg" alt="foto de Adrian Medeiros">
         <h3>@adrianmedeirosdev</h3>
-        <div class="social-medias">
-          <a href="https://instagram.com/adrianmedeirosdev">
-            <i class="social-icon" data-feather="instagram"></i>
-          </a>
-          <a href="https://github.com/adrianmedeirosdev">
-            <i class="social-icon" data-feather="github"></i>
-          </a>
-          <a href="https://twitter.com/adrianmedeirosdev">
-            <i class="social-icon" data-feather="twitter"></i>
-          </a>
-          <a href="https://api.whatsapp.com/send?phone=5598991650677">
-            <i class="social-icon" data-feather="message-circle"></i>
-          </a>
-        </div>
+        <section id="technologies">
+          <div class="techs-icons">
+            <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+            <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+            <img class="dev-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+            <img class="dev-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
+            <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
+            <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+            <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
+            <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-plain.svg" />
+            <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+          </div>
+        </section>
       </div>
     </div>
     <section id="projects">
@@ -56,22 +57,21 @@
     </section>
   </div>
   <footer class="footer">
-    <section id="technologies">
-      <div class="grid">
-        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
-        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
-        <img class="dev-icon"
-          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
-        <img class="dev-icon"
-          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
-        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
-        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
-        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
-        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-plain.svg" />
-        <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
-      </div>
-    </section>
-    Made by adrianmedeirosdev
+    <div class="social-medias">
+      <a href="https://instagram.com/adrianmedeirosdev">
+        <i class="social-icon" data-feather="instagram"></i>
+      </a>
+      <a href="https://github.com/adrianmedeirosdev">
+        <i class="social-icon" data-feather="github"></i>
+      </a>
+      <a href="https://twitter.com/adrianmedeirosdev">
+        <i class="social-icon" data-feather="twitter"></i>
+      </a>
+      <a href="https://api.whatsapp.com/send?phone=5598991650677">
+        <i class="social-icon" data-feather="message-circle"></i>
+      </a>
+    </div>
+    Made with 🤍 by adrianmedeirosdev
   </footer>
 </body>
 <script src="js/script.js"></script>
