--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="https://github.com/adrianmedeirosdev/mini-bio">
           <button class="btn-project-link">
             <i class="project-icon" data-feather="user"></i>
-            Mini-bio
+            Mini-portfolio
           </button>
         </a>
         <a href="https://adrianmedeirosdev.github.io/simple-calculator">
