--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <i class="social-icon" data-feather="message-circle"></i>
       </a>
     </div>
-    Made with 🤍 by adrianmedeirosdev
+    <p> Made with 🤍 by adrianmedeirosdev</p>
   </footer>
 </body>
 <script>
