--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <section id="projects">
       <div class="wrapper">
-        <a href="https://github.com/adrianmedeirosdev/mini-bio">
+        <a href="https://github.com/adrianmedeirosdev/mini-portfolio">
           <button class="btn-project-link">
             <i class="project-icon" data-feather="user"></i>
             Mini-portfolio
@@ -47,7 +47,7 @@
             Calculadora simples
           </button>
         </a>
-        <a href="https://adrianmedeirosdev.github.io/to-do-list">
+        <a href="https://adrianmedeirosdev.github.io/to-do">
           <button class=" btn-project-link">
             <i class="project-icon" data-feather="list"></i>
             To-do list
