--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <a href="https://github.com/adrianmedeirosdev/mini-portfolio">
           <button class="btn-project-link">
             <i class="project-icon" data-feather="user"></i>
-            Mini-portfolio
+            Mini Portfolio
           </button>
         </a>
         <a href="https://adrianmedeirosdev.github.io/simple-calculator">
           <button class="btn-project-link">
             <i class="project-icon" data-feather="divide-square"></i>
-            Calculadora simples
+            Calculadora Simples
           </button>
         </a>
         <a href="https://adrianmedeirosdev.github.io/to-do">
           <button class=" btn-project-link">
             <i class="project-icon" data-feather="list"></i>
-            To-do list
+            To-Do
           </button>
         </a>
       </div>
