--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="me-container">
       <div class="perfil-container">
         <img class="perfil-img" src="assets/me.jpeg" alt="foto de Adrian Medeiros">
-        <h3>@adrianmedeirosdev</h3>
+        <h3>Adrian Lima Medeiros</h3>
         <section id="technologies">
           <div class="techs-icons">
             <img class="dev-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
@@ -71,7 +71,7 @@
         <i class="social-icon" data-feather="message-circle"></i>
       </a>
     </div>
-    <p> Made with 🤍 by adrianmedeirosdev</p>
+    <p> Made with 🤍 by @adrianmedeirosdev</p>
   </footer>
 </body>
 <script>
