--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <a href="https://github.com/adrianmedeirosdev">
         <i class="social-icon" data-feather="github"></i>
       </a>
-      <a href="https://twitter.com/adrianmedeirosdev">
+      <a href="https://twitter.com/adrianmdeiros">
         <i class="social-icon" data-feather="twitter"></i>
       </a>
       <a href="https://api.whatsapp.com/send?phone=5598991650677">
