--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </div>
     <section id="projects">
       <div class="wrapper">
-        <a href="https://github.com/adrianmedeirosdev/mini-portfolio">
+        <a href="https://github.com/adrianmedeirosdev/portfolio">
           <button class="btn-project-link">
             <i class="project-icon" data-feather="user"></i>
-            Mini Portfolio
+            Portfolio
           </button>
         </a>
         <a href="https://adrianmedeirosdev.github.io/simple-calculator">
